Clean up excess js and vendor libs. Back to basics.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr/modernizr.js"></script>
     </head>
     <body class="body">
 
@@ -24,8 +22,8 @@
 
         <canvas class="canvas hide" data-processing-sources="processing/huddle/huddle.pde"></canvas>
 
-        <script src="js/vendor/jquery/dist/jquery.min.js"></script>
-        <script src="js/vendor/processing-1.4.1.min.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/processing-1.4.1.min.js"></script>
         <script src="js/main.js"></script>
 
 
