Removed normalize.css and jquery

--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
     <body class="body">
 
         <header class="header">
-            <h1 class="title hide">Huddle<br />Together</h1>
+            <h1 class="title hidden">Huddle<br />Together</h1>
         </header>
 
-        <a class="link hide" href="http://lokeshdhakar.com">
+        <a class="link hidden" href="http://lokeshdhakar.com">
             lokeshdhakar.com
         </a>
 
-        <canvas class="canvas hide" data-processing-sources="/processing/huddle/huddle.pde"></canvas>
+        <canvas class="canvas" data-processing-sources="/processing/huddle/huddle.pde"></canvas>
 
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/processing-1.4.1.min.js"></script>
         <script src="/js/main.js"></script>
+        <script src="/js/processing-1.4.1.min.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
