Added Grunt for watching and deploying

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 
     </head>
     <body class="body">
-
-        <header class="header">
+        
+        <header id="header">
             <h1 class="title hidden">Huddle<br />Together</h1>
+            <a class="link hidden" href="http://lokeshdhakar.com">lokeshdhakar.com</a>
         </header>
 
-        <a class="link hidden" href="http://lokeshdhakar.com">
-            lokeshdhakar.com
-        </a>
-
-        <canvas class="canvas" data-processing-sources="/processing/huddle/huddle.pde"></canvas>
+        <canvas id="canvas" class="canvas" data-processing-sources="/processing/huddle/huddle.pde"></canvas>
 
         <script src="/js/main.js"></script>
         <script src="/js/processing-1.4.1.min.js"></script>
