Use CSS animations vs transforms for fadein

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body class="body">
         
         <header id="header">
-            <h1 class="title hidden">Huddle<br />Together</h1>
-            <a class="link hidden" href="http://lokeshdhakar.com">lokeshdhakar.com</a>
+            <h1 class="title">Huddle<br />Together</h1>
+            <a class="link" href="http://lokeshdhakar.com">lokeshdhakar.com</a>
         </header>
 
         <canvas id="canvas" class="canvas" data-processing-sources="/processing/huddle/huddle.pde"></canvas>
